# AudioBookRequest

./: .dockerignore  .env.local  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: build.yaml  check-format.yaml  docs.yaml  nix-build.yaml
alembic/: env.py
alembic/versions/: 0fa71b2e5d30_add gotify support.py  304eed96f8ed_add_additional_fields.py  497b4366eb45_add_manual_bookrequest.py  63489e50e337_remove_notification_services.py  6477fe89a011_rename_prowlarr_date_col.py  76d7ccb8a116_add_succ_failed_event_type.py  7735bdd2c970_separate_primary_key.py  787e0b375062_add_user_group_add_bookrequest.py  845d93d41d01_more_info_in_bookrequests.py  873737d287d3_manual_requests_downloaded_flag.py  8ebcc63e79ea_add_root_user_attribute.py  939af2c2c9ea_add_user.py  9a71f7625ec9_add_sources_indexers.py  9f0430047af4_add_notifications.py  bc237f8b139d_remove_indexer_table.py  cafe562e2832_simplify_bookrequests.py  d6a02deef57b_user_group_enum_config.py  e4f418be2275_add_updated_at_to_bookrequest.py  e6fa1af6d802_add_downloaded_attribute.py
app/: db.py  main.py  models.py
app/internal/: book_search.py  env_settings.py  models.py  notifications.py  query.py
app/internal/auth/: auth.py  authentication.py  config.py  login.py  oidc_config.py  session_middleware.py
app/internal/indexers/: abstract.py  base.py  configuration.py  indexer_util.py  indexers.py  mam.py
app/internal/mam/: mam.py
app/internal/prowlarr/: indexer_categories.py  notifications.py  prowlarr.py  source_metadata.py
app/internal/ranking/: download_ranking.py  quality_extract.py
app/routers/: auth.py  login.py  root.py  search.py  settings.py  wishlist.py
app/util/: auth.py  book_search.py  cache.py  connection.py  db.py  download_ranking.py  fetch_js.py  json_type.py  log.py  notifications.py  prowlarr.py  query.py  redirect.py  templates.py  time.py  toast.py
app/util/ranking/: download_ranking.py  quality.py  quality_extract.py
docs/: README.md  docker-compose.yaml  go.mod  hugo.yaml
docs/content/: _index.md
docs/content/docs/: _index.md  contribution-guidelines.md
docs/content/docs/concepts/: _index.md  environment-variables.md
docs/content/docs/getting-started/: _index.md  docs.md
docs/content/docs/getting-started/first-login/: _index.md
docs/content/docs/getting-started/running-the-app/: _index.md  bare-metal.md  docker-compose.md  docker.md  kubernetes.md
docs/content/docs/local-development/: _index.md
docs/content/docs/tutorials/: _index.md
docs/content/docs/tutorials/notifications/: _index.md  discord.md
static/: .gitignore  tw.css
styles/: globals.css
templates/: base.html  init.html  invalid_oidc.html  login.html  manual.html  redirect.html  root.html  search.html  settings.html  sources.html  wishlist.html
templates/icons/: ban.html  checkmark.html  door-exit.html  download.html  gift-solid.html  gift.html  info-circle.html  list.html  moon.html  pencil.html  photo-off.html  plus.html  search.html  settings.html  sun.html  test-pipe.html  trash.html  xmark.html
templates/scripts/: alpinejs.html  toast.html
templates/settings_page/: account.html  base.html  download.html  indexers.html  notifications.html  prowlarr.html  security.html  users.html
templates/wishlist_page/: base_wishlist.html  manual.html  sources.html  wishlist.html
(+1 files in other folders)
