[project]
name = "AudioBookRequest"
version = "1.3.0"
requires-python = ">= 3.12"
readme = "README.md"
dependencies = [
    "aiohttp==3.11.13",
    "alembic==1.15.1",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "fastapi[standard]==0.115.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jinja2-fragments==1.8.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pydantic-core==2.27.2",
    "pyjwt==2.10.1",
    "pytailwindcss==0.2.0",
    "sqlmodel==0.0.23",
    "terminaltables==3.1.10",
    "torrent-parser==0.4.1",
    "typer==0.15.2",
    "urllib3==2.3.0",
    "rapidfuzz>=3.12.2",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
]

# setuptools by default expects a "src" folder structure
[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = false

[tool.pyright]
include = ["**/*.py"]
exclude = ["**/__pycache__", "**/.venv", "**/.direnv"]
ignore = []

typeCheckingMode = "strict"
reportUnknownParameterType = true
reportMissingParameterType = true

[tool.djlint]
profile = "jinja"
ignore = "H021"

[dependency-groups]
dev = ["djlint>=1.36.4", "pyright==1.1.398", "ruff>=0.11.6"]
